[package]
name = "dst-load-controller"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "dst-load-controller"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
k8s-openapi = { workspace = true }
kube = { workspace = true, default-features = false, features = [
    "client",
    "rustls-tls",
] }
linkerd2-proxy-api = { workspace = true }
prometheus-client = { workspace = true }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tonic = { workspace = true, default-features = false, features = ["transport"] }
tracing = "0.1"

[dependencies.kubert]
workspace = true
default-features = false
features = ["clap", "prometheus-client", "runtime", "rustls-tls"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "fmt", "json"]
